--- a/BlogposterCMS/apps/designer/assets/scss/designer.scss
+++ b/BlogposterCMS/apps/designer/assets/scss/designer.scss
@@ -20,6 +20,7 @@ body {
   margin: 0;
   display: flex;
   flex-direction: column;
+  font-family: var(--font-body);
 }
 
 // Flex row wrapper for sidebar, content, and publish panel
