--- a/BlogposterCMS/public/assets/scss/_fonts.scss
+++ b/BlogposterCMS/public/assets/scss/_fonts.scss
@@ -4,28 +4,28 @@
 
    @font-face {
     font-family: 'Noto Sans Variable';
-    src: url('../fonts/NotoSans-VariableFont_wdth,wght.ttf') format('truetype');
+    src: url('/assets/fonts/NotoSans-VariableFont_wdth,wght.ttf') format('truetype');
     font-weight: 100 900;
     font-stretch: 75% 100%;
     font-style: normal;
   }
   @font-face {
     font-family: 'Noto Sans Variable';
-    src: url('../fonts/NotoSans-Italic-VariableFont_wdth,wght.ttf') format('truetype');
+    src: url('/assets/fonts/NotoSans-Italic-VariableFont_wdth,wght.ttf') format('truetype');
     font-weight: 100 900;
     font-stretch: 75% 100%;
     font-style: italic;
   }
   @font-face {
     font-family: 'Open Sans Variable';
-    src: url('../fonts/OpenSans-VariableFont_wdth,wght.ttf') format('truetype');
+    src: url('/assets/fonts/OpenSans-VariableFont_wdth,wght.ttf') format('truetype');
     font-weight: 100 900;
     font-stretch: 75% 100%;
     font-style: normal;
   }
   @font-face {
     font-family: 'Open Sans Variable';
-    src: url('../fonts/OpenSans-Italic-VariableFont_wdth,wght.ttf') format('truetype');
+    src: url('/assets/fonts/OpenSans-Italic-VariableFont_wdth,wght.ttf') format('truetype');
     font-weight: 100 900;
     font-stretch: 75% 100%;
     font-style: italic;
